2001-02-09  Thomas Quinot  <quinot@inf.enst.fr>

	* Droopi.Protocols.Echo: Now creates a Request object when
	data is received.
	* corba/*: Parts of imported AdaBroker source code, adapted
	for use within Droopi, which will constitute all aspects of the
	CORBA personality.

2001-02-01  Thomas Quinot  <quinot@inf.enst.fr>

	* Droopi.Protocols.Echo: Echoes.
	* Doopi.Buffers: Disambiguate Release vs. Release_Contents.

2001-01-30  Thomas Quinot  <quinot@inf.enst.fr>

	* Droopi.Protocols.Echo, all: Tested protocol interface.
	* Droopi.Channels, Droopi.Protocols: Make Channels.Channel
	an abstract type, and Protocols.Session_Channel (private)
	an extension thereof. Resolves circular dependence issue
	between protocols and channels.

2001-01-29  Thomas Quinot  <quinot@inf.enst.fr>

	* Droopi.Channels: Implemented Send_Data and Receive_Data.

2001-01-25  Thomas Quinot  <quinot@inf.enst.fr>

	* Droopi.Setup.Test: Test setup procedure for a minimal
	non-tasking server.

	* Droopi.ORB: Removed pragma Elaborate_Body because the following
	elaboration sequence must be used:
	  Droopi.ORB (spec)
	  Droopi.ORB.Task_Policies (spec)
	  Droopi.ORB.Task_Policies (body)
	  Droopi.ORB (body).

2001-01-24  Thomas Quinot  <quinot@inf.enst.fr>

	* Droopi.ORB: Type Root_ORB is abstract, because its implementation
	requires visibility on child package Task_Policies.

	* Droopi.ORB.Task_Policies: Branch from Droopi.Tasking_Policies.
	Tasking policies are defined in a child package of Droopi.ORB
	because they need to have visibility of ORB threads management.

2001-01-15  Thomas Quinot  <quinot@inf.enst.fr>

	* Droopi.Opaque, Droopi.Buffers: Imported from Broca.
	Must change from System.Address-based implementation to portable
	code that can run on the JVM, possibly giving up some theoretical
	optimisation possibilities for now.

	* Droopi.Tasking_Policies: The implementation of the task-per-session
	policy depends on ORB, because the policy needs to create a task that