@@ -5,6 +5,7 @@
 #
 droopi.buffers=debug
 droopi.channels=debug
+droopi.filters.sockets=debug
 droopi.locks=debug
 droopi.orb=debug
 droopi.protocols.echo=debug
